readdet line after historie

--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
                 </span>
             </p>
         </div>
+        <p class="para_c1_line"></p>
         <script>
             function toggleHistorieText(hide) {
                 var hiddenText = document.getElementById("hiddenHistorieText");
