--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="CSS/components/sectionPricing.css">
     <link rel="stylesheet" href="CSS/components/infoBox.css">
     <link rel="stylesheet" href="CSS/components/smallHeader.css">
+    <link rel="stylesheet" href="CSS/components/SEO.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="logo-container">
@@ -71,6 +73,9 @@
 
     <div class="small_header">
         <nav>
+            <seo>
+                <p>Jennifer Falke<br>Hunde-Coaching<br>Hunde-Training<br>Hunde Training<br>Hunde Coaching<br>Falke-Dog-Coaching<br>Hunde<br>Training<br>Coaching<br>jennifer falke<br>falke<br>dogcoaching<br></p>
+            </seo>   
             <div class="small_header_background">
                 <div class="small_header_background_logo">
                     <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="small_header_background_logo_img">
