--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
     </header>
 
     <div class="small_header">
-        <nav>
-            <seo>
-                <p>Jennifer Falke<br>Hunde-Coaching<br>Hunde-Training<br>Hunde Training<br>Hunde Coaching<br>Falke-Dog-Coaching<br>Hunde<br>Training<br>Coaching<br>jennifer falke<br>falke<br>dogcoaching<br></p>
-            </seo>   
+        <nav>  
             <div class="small_header_background">
                 <div class="small_header_background_logo">
                     <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="small_header_background_logo_img">
@@ -455,6 +452,9 @@
                     <p class="footer_p"><a href="tel:+4915773513694">+49(0)157 735 136 94</a></p>
                     <p class="footer_p">j.falke@falke-dog-coaching.de</p>
                 </ul>
+            </div>
+            <div class="seo">
+                <p>Jennifer Falke<br>Hunde-Coaching<br>Hunde-Training<br>Hunde Training<br>Hunde Coaching<br>Falke-Dog-Coaching<br>Hunde<br>Training<br>Coaching<br>jennifer falke<br>falke<br>dogcoaching<br></p>
             </div>
             <div class="socials-and-impressum-container">
                 <ul class="socials-and-impressum">
