placeholder between home-image and text

--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
             historie.addEventListener('click', toggleMenu);
         });
     </script>
-        
     <main class="main">
         <div class="image_container_header_pic">
             <img class="headerPic" id="headerPic" src="pictures/headerPicReframed.jpg">
@@ -148,6 +147,7 @@
                 });
             </script>                
         </div>
+        <div class="placeholder_mobile"></div>
         <p id="home"></p>
         <div class="container1">
             <p class="para_c1">INDIVIDUELLES COACHING FÜR MENSCH UND HUND</p>
