--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image">
         </div>
 
-        <div onclick="scrollToElementHome()" class="nav-item"><a class="nav-link">HOME</a></div>
+        <div onclick="scrollToElementHome()" class="nav-item"><a class="nav-link" id="home_nav_bar">HOME</a></div>
         <script>
             function scrollToElementHome() {
                 document.getElementById("home").scrollIntoView({
