--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             </div> 
             <p class="para_c1_line_small_window"></p>                                  
             <div class="block">
-                <h2 class="block-title">VERHALTENSBERATUNG / -THERAPIE</h2>
+                <h2 class="block-title">VERHALTENSÜBERPRÜFUNG / -THERAPIE</h2>
                 <div class="content-container">
                     <div class="text_and_list">
                         <p class="block-text">Ihr Hund stellt Sie vor eine besondere Herausforderung? Sie möchten unerwünschtes
@@ -373,7 +373,7 @@
                             <button onclick="sendFormularToEmail()" class="leistungen_type_button">Mail senden</button>
                             <script>
                                 function sendFormularToEmail() {
-                                    var email = 'beispiel@domain.com'; 
+                                    var email = 'j.falke@falke-dog-coaching.com'; 
                                     var subject = encodeURIComponent('Ausgefülltes Formular von: ');
                                     var body = encodeURIComponent('Hiermit sende ich, Jennifer Falke mein ausgefülltes Formular.\n \nBitte Datei anfügen! \nTragen Sie Ihren Namen im Betreff ein!');
                                     var mailtoLink = 'mailto:' + email + '?subject=' + subject + '&body=' + body;
@@ -450,7 +450,7 @@
                     <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image-footer">
                     <p class="footer_para_c1_line"></p>
                     <p class="footer_p"><a href="tel:+4915773513694">+49(0)157 735 136 94</a></p>
-                    <p class="footer_p">j.falke@falke-dog-coaching.de</p>
+                    <p class="footer_p">j.falke@falke-dog-coaching.com</p>
                 </ul>
             </div>
             <div class="seo">
@@ -466,8 +466,8 @@
                         }
                     </script>
                     <p class="footer_para_c1_line_contact_impressum"></p>
-                    <button class="kontakt_button">KONTAKT</button>
-                    <button class="impressum_button">IMPRESSUM</button>
+                    <button onclick="sendFormularToEmail()" class="kontakt_button">KONTAKT</button>
+                    <a href="./impressum.html"></a><button class="impressum_button">IMPRESSUM</button></a>
                 </ul>
             </div>
         </div>
