--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
         <div class="placeholder_mobile"></div>
         <p id="home"></p>
         <div class="container1">
-            <p class="para_c1">INDIVIDUELLES COACHING FÜR MENSCH UND HUND</p>
+            <div class="info_box_header">
+                <h1 class="header_mein_coaching_header">INDIVIDUELLES COACHING FÜR MENSCH UND HUND</h1>
+            </div>
             <div class="home-text">
                 <div class="home_text_container">
                     <p class="home_main_text">
@@ -256,7 +258,7 @@
             </div> 
             <p class="para_c1_line_small_window"></p>                                  
             <div class="block">
-                <h2 class="block-title">VERHALTENSÜBERPRÜFUNG / -THERAPIE</h2>
+                <h2 class="block-title">VERHALTENSBERATUNG / -THERAPIE</h2>
                 <div class="content-container">
                     <div class="text_and_list">
                         <p class="block-text">Ihr Hund stellt Sie vor eine besondere Herausforderung? Sie möchten unerwünschtes
@@ -350,10 +352,10 @@
                         (Auf Anfrage ab 3 Teilnehmer möglich)
                         <li>a 60 Minuten € 20.-/Person</li>
                         <li>jede weitere halbe Stunde € 10.-/Person</li>
-                        <p>SACHKUNDEPRÜFUNG</p>
+                        <p>VERHALTENSPRÜFUNG</p>
                         <li>pro Test und pro Person € 40.-</li>
                         <p></p>
-                        <p>SACHKUNDEPRÜFUNG</p>
+                        <p>VERHALTENSPRÜFUNG</p>
                         <li>Ca. 1.5 Stunden € 250.-</li>
                         <p></p>
                         <li>Seminare & Workshops auf Anfrage</li>
